--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,9 @@ NotBlank=必須入力です
 Email.signupForm.userId={0}をメールアドレス形式で入力してください
 Size.signupForm.password={0}は{2}文字以上{1}文字以下で入力してください
 Size.signupForm.userName={0}は{1}文字以下で入力してください
+
+updateUserForm.userId=ユーザーID
+updateUserForm.userName=ユーザー名
+
+NotBlank=必須入力です
+Size.updateUserForm.userName={0}は{1}文字以下で入力してください
