--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,9 @@
+NotBlank=必須入力です
+
 signupForm.userId=ユーザーID
 signupForm.password=パスワード
 signupForm.userName=ユーザー名
 
-NotBlank=必須入力です
 Email.signupForm.userId={0}をメールアドレス形式で入力してください
 Size.signupForm.password={0}は{2}文字以上{1}文字以下で入力してください
 Size.signupForm.userName={0}は{1}文字以下で入力してください
@@ -10,5 +11,14 @@ Size.signupForm.userName={0}は{1}文字以下で入力してください
 updateUserForm.userId=ユーザーID
 updateUserForm.userName=ユーザー名
 
-NotBlank=必須入力です
 Size.updateUserForm.userName={0}は{1}文字以下で入力してください
+
+registComponentForm.componentId=構成品ID
+registComponentForm.componentCd=構成品コード
+registComponentForm.componentName=商品名
+registComponentForm.componentStatus=取扱状態
+
+Size.registComponent.componentId={0}は{1}文字以下で入力してください
+Size.registComponent.componentCd={0}は{1}文字以下で入力してください
+Size.registComponent.componentName={0}は{1}文字以下で入力してください
+Range.registComponent.componentStatus={0}は選択肢の中から選んでください
