add RegistItemForm and their test and validation error messages

--- a/bin/main/messages.properties
+++ b/bin/main/messages.properties
@@ -21,3 +21,11 @@ registComponentForm.componentStatus=取扱状態
 Size.registComponent.componentId={0}は{1}文字以下で入力してください
 Size.registComponent.componentCd={0}は{1}文字以下で入力してください
 Size.registComponent.componentName={0}は{1}文字以下で入力してください
+
+registItemForm.itemId=商品ID
+registItemForm.itemCd=商品コード
+registItemForm.itemName=商品名
+
+Size.registItemForm.itemId={0}は{1}文字以下で入力してください
+Size.registItemForm.itemCd={0}は{1}文字以下で入力してください
+Size.registItemForm.itemName={0}は{1}文字以下で入力してください
