update form validation

--- a/bin/main/messages.properties
+++ b/bin/main/messages.properties
@@ -1,4 +1,5 @@
 NotBlank=必須入力です
+NotNull=This is null error.
 
 signupForm.userId=ユーザーID
 signupForm.password=パスワード
@@ -16,16 +17,35 @@ Size.updateUserForm.userName={0}は{1}文字以下で入力してください
 registComponentForm.componentId=構成品ID
 registComponentForm.componentCd=構成品コード
 registComponentForm.componentName=商品名
-registComponentForm.componentStatus=取扱状態
 
-Size.registComponent.componentId={0}は{1}文字以下で入力してください
-Size.registComponent.componentCd={0}は{1}文字以下で入力してください
-Size.registComponent.componentName={0}は{1}文字以下で入力してください
+Size.registComponent.componentId={0}は{1}文字以内です
+Size.registComponent.componentCd={0}は{1}文字以内です
+Size.registComponent.componentName={0}は{1}文字以内です
 
 registItemForm.itemId=商品ID
 registItemForm.itemCd=商品コード
 registItemForm.itemName=商品名
+registItemForm.comp1=構成品ID-1
+registItemForm.comp2=構成品ID-2
+registItemForm.comp3=構成品ID-3
+registItemForm.comp4=構成品ID-4
+registItemForm.comp5=構成品ID-5
+registItemForm.comp6=構成品ID-6
+registItemForm.comp7=構成品ID-7
+registItemForm.comp8=構成品ID-8
+registItemForm.comp9=構成品ID-9
+registItemForm.comp10=構成品ID-10
 
-Size.registItemForm.itemId={0}は{1}文字以下で入力してください
-Size.registItemForm.itemCd={0}は{1}文字以下で入力してください
-Size.registItemForm.itemName={0}は{1}文字以下で入力してください
+Size.registItemForm.itemId={0}は{1}文字以内です
+Size.registItemForm.itemCd={0}は{1}文字以内です
+Size.registItemForm.itemName={0}は{1}文字以内です
+Size.registItemForm.comp1={0}は{1}文字以内です
+Size.registItemForm.comp2={0}は{1}文字以内です
+Size.registItemForm.comp3={0}は{1}文字以内です
+Size.registItemForm.comp4={0}は{1}文字以内です
+Size.registItemForm.comp5={0}は{1}文字以内です
+Size.registItemForm.comp6={0}は{1}文字以内です
+Size.registItemForm.comp7={0}は{1}文字以内です
+Size.registItemForm.comp8={0}は{1}文字以内です
+Size.registItemForm.comp9={0}は{1}文字以内です
+Size.registItemForm.comp10={0}は{1}文字以内です
