add Login and Logout function

--- a/bin/main/messages.properties
+++ b/bin/main/messages.properties
@@ -1,3 +1,11 @@
+# login error messages
+AbstractUserDetailsAuthenticationProvider.locked=アカウントはロックされています
+AbstractUserDetailsAuthenticationProvider.disabled=アカウントは使用できません
+AbstractUserDetailsAuthenticationProvider.expired=アカウントの有効期限が切れています
+AbstractUserDetailsAuthenticationProvider.cledentialsExpeired=パスワードの有効期限が切れています
+AbstractUserDetailsAuthenticationProvider.badCredentials=ユーザーIDまたはパスワードが間違っています
+
+# validation error messages
 NotBlank=必須入力です
 NotNull=This is null error.
 
