--- a/bin/main/messages.properties
+++ b/bin/main/messages.properties
@@ -22,38 +22,32 @@ updateUserForm.userName=ユーザー名
 
 Size.updateUserForm.userName={0}は{1}文字以下で入力してください
 
-registComponentForm.componentId=構成品ID
-registComponentForm.componentCd=構成品コード
-registComponentForm.componentName=商品名
+registProductForm.productId=商品ID
+registProductForm.productCd=商品コード
+registProductForm.productName=商品名
+registProductForm.permitPeriod=使用許可日数
+registProductForm.comp1=構成品ID-1
+registProductForm.comp2=構成品ID-2
+registProductForm.comp3=構成品ID-3
+registProductForm.comp4=構成品ID-4
+registProductForm.comp5=構成品ID-5
+registProductForm.comp6=構成品ID-6
+registProductForm.comp7=構成品ID-7
+registProductForm.comp8=構成品ID-8
+registProductForm.comp9=構成品ID-9
+registProductForm.comp10=構成品ID-10
 
-Size.registComponent.componentId={0}は{1}文字以内です
-Size.registComponent.componentCd={0}は{1}文字以内です
-Size.registComponent.componentName={0}は{1}文字以内です
-
-registItemForm.itemId=商品ID
-registItemForm.itemCd=商品コード
-registItemForm.itemName=商品名
-registItemForm.comp1=構成品ID-1
-registItemForm.comp2=構成品ID-2
-registItemForm.comp3=構成品ID-3
-registItemForm.comp4=構成品ID-4
-registItemForm.comp5=構成品ID-5
-registItemForm.comp6=構成品ID-6
-registItemForm.comp7=構成品ID-7
-registItemForm.comp8=構成品ID-8
-registItemForm.comp9=構成品ID-9
-registItemForm.comp10=構成品ID-10
-
-Size.registItemForm.itemId={0}は{1}文字以内です
-Size.registItemForm.itemCd={0}は{1}文字以内です
-Size.registItemForm.itemName={0}は{1}文字以内です
-Size.registItemForm.comp1={0}は{1}文字以内です
-Size.registItemForm.comp2={0}は{1}文字以内です
-Size.registItemForm.comp3={0}は{1}文字以内です
-Size.registItemForm.comp4={0}は{1}文字以内です
-Size.registItemForm.comp5={0}は{1}文字以内です
-Size.registItemForm.comp6={0}は{1}文字以内です
-Size.registItemForm.comp7={0}は{1}文字以内です
-Size.registItemForm.comp8={0}は{1}文字以内です
-Size.registItemForm.comp9={0}は{1}文字以内です
-Size.registItemForm.comp10={0}は{1}文字以内です
+Size.registProductForm.productId={0}は{1}文字以内です
+Size.registProductForm.productCd={0}は{1}文字以内です
+Size.registProductForm.productName={0}は{1}文字以内です
+Range.registProductForm.permitPeriod={0}は{2}以上{1}以下の範囲で指定してください
+Size.registProductForm.comp1={0}は{1}文字以内です
+Size.registProductForm.comp2={0}は{1}文字以内です
+Size.registProductForm.comp3={0}は{1}文字以内です
+Size.registProductForm.comp4={0}は{1}文字以内です
+Size.registProductForm.comp5={0}は{1}文字以内です
+Size.registProductForm.comp6={0}は{1}文字以内です
+Size.registProductForm.comp7={0}は{1}文字以内です
+Size.registProductForm.comp8={0}は{1}文字以内です
+Size.registProductForm.comp9={0}は{1}文字以内です
+Size.registProductForm.comp10={0}は{1}文字以内です
