add postmapping method of product reference

--- a/bin/main/messages.properties
+++ b/bin/main/messages.properties
@@ -9,45 +9,48 @@ AbstractUserDetailsAuthenticationProvider.badCredentials=ユーザーIDまたは
 NotBlank=必須入力です
 NotNull=This is null error.
 
-signupForm.userId=ユーザーID
-signupForm.password=パスワード
-signupForm.userName=ユーザー名
+userId=ユーザーID
+password=パスワード
+userName=ユーザー名
 
-Email.signupForm.userId={0}をメールアドレス形式で入力してください
-Size.signupForm.password={0}は{2}文字以上{1}文字以下で入力してください
-Size.signupForm.userName={0}は{1}文字以下で入力してください
+Email.userId={0}をメールアドレス形式で入力してください
+Size.password={0}は{2}文字以上{1}文字以下で入力してください
+Size.userName={0}は{1}文字以下で入力してください
 
-updateUserForm.userId=ユーザーID
-updateUserForm.userName=ユーザー名
+productId=商品ID
+productCd=商品コード
+productName=商品名
+permitPeriod=使用許可日数
+comp1=構成品ID-1
+comp2=構成品ID-2
+comp3=構成品ID-3
+comp4=構成品ID-4
+comp5=構成品ID-5
+comp6=構成品ID-6
+comp7=構成品ID-7
+comp8=構成品ID-8
+comp9=構成品ID-9
+comp10=構成品ID-10
 
-Size.updateUserForm.userName={0}は{1}文字以下で入力してください
+Size.productId={0}は{1}文字以内です
+Size.productCd={0}は{1}文字以内です
+Size.productName={0}は{1}文字以内です
+Range.permitPeriod={0}は{2}以上{1}以下の範囲で指定してください
+Size.comp1={0}は{1}文字以内です
+Size.comp2={0}は{1}文字以内です
+Size.comp3={0}は{1}文字以内です
+Size.comp4={0}は{1}文字以内です
+Size.comp5={0}は{1}文字以内です
+Size.comp6={0}は{1}文字以内です
+Size.comp7={0}は{1}文字以内です
+Size.comp8={0}は{1}文字以内です
+Size.comp9={0}は{1}文字以内です
+Size.comp10={0}は{1}文字以内です
 
-registProductForm.productId=商品ID
-registProductForm.productCd=商品コード
-registProductForm.productName=商品名
-registProductForm.permitPeriod=使用許可日数
-registProductForm.comp1=構成品ID-1
-registProductForm.comp2=構成品ID-2
-registProductForm.comp3=構成品ID-3
-registProductForm.comp4=構成品ID-4
-registProductForm.comp5=構成品ID-5
-registProductForm.comp6=構成品ID-6
-registProductForm.comp7=構成品ID-7
-registProductForm.comp8=構成品ID-8
-registProductForm.comp9=構成品ID-9
-registProductForm.comp10=構成品ID-10
+workingDate=作業日
+shipmentDate=出荷日
+workQuantity=作業数量
 
-Size.registProductForm.productId={0}は{1}文字以内です
-Size.registProductForm.productCd={0}は{1}文字以内です
-Size.registProductForm.productName={0}は{1}文字以内です
-Range.registProductForm.permitPeriod={0}は{2}以上{1}以下の範囲で指定してください
-Size.registProductForm.comp1={0}は{1}文字以内です
-Size.registProductForm.comp2={0}は{1}文字以内です
-Size.registProductForm.comp3={0}は{1}文字以内です
-Size.registProductForm.comp4={0}は{1}文字以内です
-Size.registProductForm.comp5={0}は{1}文字以内です
-Size.registProductForm.comp6={0}は{1}文字以内です
-Size.registProductForm.comp7={0}は{1}文字以内です
-Size.registProductForm.comp8={0}は{1}文字以内です
-Size.registProductForm.comp9={0}は{1}文字以内です
-Size.registProductForm.comp10={0}は{1}文字以内です
+DateTimeFormat.workingDate={0}は"yyyyMMdd"形式で入力してください
+DateTimeFormat.shipmentDate={0}は"yyyyMMdd"形式で入力してください
+Min.workQuantity={0}は{1}以上の数値で入力してください
